# rust_book

./: README.md
adder/: integration_tests.rs
adder/src/: lib.rs
adder/tests/common/: mod.rs
advanced_features/: README.md
advanced_features/src/: main.rs
common_collections/src/: main.rs
enums/src/: main.rs
enums_and_structs/: Cargo.toml
enums_and_structs/src/: main.rs
error_handling/src/: main.rs
fearless_concurrency/: README.md
fearless_concurrency/src/: main.rs
functional_features/src/: main.rs
generics_traits_lifetimes/src/: aggregator.rs  lib.rs  main.rs
guessing_game/: README.md
guessing_game/src/: main.rs
gui/src/: lib.rs  main.rs
hello/src/: lib.rs  main.rs
minigrep/src/: lib.rs  main.rs
object_oriented_feats/: Cargo.toml  README.md
object_oriented_feats/src/: lib.rs  main.rs
option_and_match/: Cargo.toml
option_and_match/src/: main.rs
packages_crates_mods/: Cargo.toml
packages_crates_mods/src/: lib.rs  main.rs
patterns_and_matching/: README.md
patterns_and_matching/src/: main.rs
smart_pointers/: README.md
smart_pointers/src/: lib.rs  main.rs
structs/: README.md
structs/src/: main.rs
